  [Michele Simionato]
  * Added an experimental version of the event based risk calculator which
    is able to use GMFs imported from an external file
  * Added a `max_curve` functionality to compute the upper limit of the
    hazard curves amongst realizations
  * Raised an error if the user specifies `quantile_loss_curves`
    or `conditional_loss_poes` in a classical_damage calculation
  * Added a CSV exporter for the benefit-cost-ratio calculator
  * The classical_risk calculator now reads directly the probability maps,
    not the hazard curves
  * The loss curves are now computed on the fly for a given asset
    for the event based risk calculator.
  * The loss ratios are now stored in the datastore and not in an
    external .ext5 file.
  * The engine outputs are now streamed by the WebUI
  * Used a temporary export directory in the tests, to avoid conflicts
    in multiuser situations
  * Added an .npz exporter for the loss maps
  * Raised an error early when using a complex logic tree in scenario
    calculations
  * Changed the CSV exporter for the loss curves: now it exports all the
    curves for a given site for the classical_risk calculator
  * Fixed the save_ruptures procedure when there are more than 256
    surfaces in the MultiSurface;
  * Renamed the `csq_` outputs of the scenario_damage to `losses_`
  * Changed the way scenario_damage are stored internally to be more
    consistent with the other calculators
  * Removed the GSIM from the exported file name of the risk outputs
  * New CSV exporter for GMFs generated by the event based calculator
  * The event IDs are now unique and a constraint on the maximum
    number of source groups (65,536) has been added
  * Added an output `losses_by_event` to the scenario_risk calculator
  * Changed the output `ruptures.csv` to avoid duplications
  * Added an output `losses_by_taxon` to the scenario_risk calculator
  * Fixed a performance bug in `get_gmfs`: now the scenario risk and damage