@@ -86,8 +86,8 @@ The remaining new parameters introduced in this example are the following:
     insurance limits and deductibles must be listed for each asset in the 
     exposure model, as described in Example~5 in Section~\ref{sec:exposure}.
 
-  \item \Verb+all_losses+: this parameter was introduced in \glsdesc{acr:oqe22}
-    and specifies whether the individual asset and portfolio losses should be
+  \item \Verb+asset_loss_table+: this parameter
+    specifies whether the individual asset and portfolio losses should be
     stored for each realization; the default value of this parameter is
     \Verb+false+ and only mean and standard deviation of the portfolio losses
     across all realizations are stored. If this flag is set to \Verb+true+, a
