@@ -13,7 +13,7 @@ number_of_ground_motion_fields = 11
 gmfs_csv = GMF_results_smallTest.txt
 
 [outputs]
-all_losses = true
+asset_loss_table = true
 
 [export]
 export_dir = /tmp
